// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authentication renderClientModal should match snapshot 1`] = `
<div>
  <Component
    footerItems={
      <React.Fragment>
        <Unknown
          onClick={[Function]}
        >
          Developers
        </Unknown>
        <Unknown
          onClick={[Function]}
        >
          Logout
        </Unknown>
      </React.Fragment>
    }
    tapOutsideToDissmiss={false}
    title="Agency Cloud User Licence?"
    visible={true}
  >
    <p>
      <span>
        To access the Reapit Marketplace, you will need to have an Agency Cloud User Licence. To obtain a licence, please visit the
         
      </span>
      <span>
        <Link
          to="/developer/desktop"
        >
          Desktop
        </Link>
      </span>
      <span>
         page within the Developers Portal, where you can subscribe to a Developer Edition of Agency Cloud.
      </span>
    </p>
  </Component>
</div>
`;

exports[`Authentication renderDeveloperModal should match snapshot 1`] = `
<div>
  <Component
    footerItems={
      <React.Fragment>
        <Unknown
          onClick={[Function]}
        >
          Register
        </Unknown>
        <Unknown
          onClick={[Function]}
        >
          Marketplace
        </Unknown>
        <Unknown
          onClick={[Function]}
        >
          Logout
        </Unknown>
      </React.Fragment>
    }
    tapOutsideToDissmiss={false}
    title="Register as a Developer?"
    visible={true}
  >
    <p>
      You are not currently registered as a Reapit Developer, if you would like to register please visit
      <span>
        <a
          onClick={[Function]}
        >
           our registration page
        </a>
      </span>
    </p>
  </Component>
</div>
`;

exports[`Authentication should match a snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "authenticationRoute",
          "pathname": "/authentication",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "authenticationRoute",
              "pathname": "/authentication",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "authenticationRoute",
            "pathname": "/authentication",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Authentication />
    </Router>
  </MemoryRouter>
</Provider>
`;
